[project]
name = "bach-real_time_amazon_data"
version = "1.0.0"
description = "RapidAPI: letscrape-6bRBa3QguO5/real-time-amazon-data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
bach_real_time_amazon_data = "server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/bachstudio/bach-real_time_amazon_data"
Repository = "https://github.com/bachstudio/bach-real_time_amazon_data"
Documentation = "https://github.com/bachstudio/bach-real_time_amazon_data#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.version]
path = "server.py"
pattern = '__version__ = "(?P<version>[^"]+)"'